# verso

./: .gitignore  CLAUDE.md  LICENSE  README.md  convert_for_pipeline.py  deleteme.py  export_annotation_volume_mat.py  export_atlas_for_visualign.py  export_mirrored_atlas.py  export_quint_for_pipeline.py  flip_counts_for_pipeline.py  flip_hires_for_pipeline.py  flip_masks_for_pipeline.py  flip_thumbnails_for_pipeline.py  generate_info_xml.py  main.py  metadata.csv  migrate_project_v1.py  pyproject.toml  visualize_atlas_lr_mirror.py
.claude/: _scratch_controller.py  _scratch_jobs.py  analysis-view.md  data-model.md  matlab-port.md  prep-view.md  quantification.md  quint-compat.md  settings.local.json  ui-design.md  warping.md
.github/workflows/: tests.yml
matlab/: README.md
matlab/+verso/: VersoRegistration.m
matlab/+verso/private/: anchoringToVectors.m  asCellOfStructs.m  barycentricMap.m  boundaryMask.m  downloadBrainglobeAtlas.m  loadAtlasVolume.m  loadProjectJson.m  npAllClose.m  prepareWarp.m  quickniiVoxelIndices.m  resolveAtlasDir.m  sampleLabelsAt.m  sampleReferenceAt.m  sampleVoxelIndices.m  warpPointsAtlasToSection.m  warpPointsSectionToAtlas.m  withCorners.m
matlab/tests/: tParity.m  tVersoRegistration.m
matlab/tests/fixtures/: parity.json
matlab/tests/fixtures/projects/: atlas_covered_nearest_plane.json  (+4 more)
scripts/: LICENSE  build_anchor_points.py  generate_region_sets.py
src/verso/: __main__.py
src/verso/engine/: __init__.py  _elastix_worker.py  anchoring.py  annotations.py  atlas.py  deepslice.py  drafts.py  elastix.py  logconf.py  preprocessing.py  quantification.py  registration.py  sections.py  warping.py
src/verso/gui/: app.py  crash_handler.py  draft_store.py  jobs.py  main_window.py  menus.py  state.py  utils.py  window_builder.py
src/verso/resources/: anchor_points.json  region_sets.json
tests/: conftest.py  test_main_window_flips.py
tests/engine/: test_anchoring.py  test_annotation_images.py  test_annotation_io.py  test_annotations_geometry.py  test_atlas.py  test_deepslice.py  test_elastix.py  test_export_images.py  test_export_stack.py  test_image_io.py  test_logconf.py  test_matlab_parity.py  test_model.py  test_point_coords_by_image.py  test_preprocessing.py  test_project_metadata.py  test_project_migration.py  test_public_api.py  test_quantification.py  test_quint_import.py  test_quint_io.py  test_registration.py  test_scene_readers.py  test_sections.py  test_status_and_drafts.py  test_warping.py
tests/gui/: test_align_handle.py  test_annotation_controller.py  test_channel_display.py  test_channel_rename.py  test_control_points.py  test_crash_handler.py  test_draft_store.py  test_edit_registry.py  test_import_quint_dialog.py  test_main_window_flips.py  test_missing_dimensions_warning.py  test_navigator_align.py  test_warp_view_revert.py
(+96 files in other folders)
