[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verso"]

[project]
name = "verso"
version = "0.1.0"
description = "Easy Registration of Sections, Obviously — histological section registration to 3D brain atlases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "opencv-python>=4.9",
    "tifffile>=2024.1.30",
    "scikit-image>=0.23",
    "brainglobe-atlasapi>=2.0",
    "imagecodecs>=2026.3.6",
    "itk-elastix>=0.13",
]

[project.scripts]
verso = "verso.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]
deepslice = [
    "DeepSlice==1.2.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "ISC",  # flake8-implicit-str-concat
    "TID",  # flake8-tidy-imports
    "T20",  # flake8-print
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "RUF",  # Ruff-specific rules
]
ignore = [
    # Ambiguous-unicode: µm, ², →, ∈ etc. are deliberate in scientific docstrings.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]  # prints in tests are fine
